--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* text-align: center; */
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  /* height: 40px; */
+  padding: 2px 5px 2px 5px;
   color: white;
 }
 
@@ -22,7 +17,8 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
 }
